--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "bcryptjs": "^2.4.0",
     "body-parser": "~1.15.2",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.1",
     "debug": "~2.2.0",
     "express": "~4.14.0",
+    "fs": "0.0.1-security",
+    "https": "^1.0.0",
     "jade": "~1.11.0",
     "jsonwebtoken": "^7.2.1",
     "mongodb": "^2.2.16",
